--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "#ProgramadorFitness",
-  "short_name": "#ProgramadorFitness",
-  "description": "Bienvenid@s a #ProgramadorFitness, serie de videos, donde te daré consejos para llevar una vida saludable y evitar el sedentarismo. Recuerda... mente sana en cuerpo sano :)",
+  "name": "De la A Dental Center",
+  "short_name": "De la A Dental Center",
+  "description": "Consultorio Odontologico 'De la A Dental Center' ",
   "background_color": "#2B2B2B",
-  "theme_color": "#F0DB4F",
+  "theme_color": "#03A9F4",
   "orientation": "portrait",
   "display": "standalone",
   "start_url": "./?utm_source=web_app_manifest",
@@ -11,54 +11,54 @@
   "lang": "es-MX",
   "icons": [
     {
-      "src": "./img/icon_1024.png",
+      "src": "./img/logox1024.jpg",
       "sizes": "1024x1024",
-      "type": "image/png"
+      "type": "image/jpg"
     },
     {
-      "src": "./img/icon_512.png",
+      "src": "./img/logox512.jpg",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/jpg"
     },
     {
-      "src": "./img/icon_384.png",
+      "src": "./img/logox384.jpg",
       "sizes": "384x384",
-      "type": "image/png"
+      "type": "image/jpg"
     },
     {
-      "src": "./img/icon_256.png",
+      "src": "./img/logox256.jpg",
       "sizes": "256x256",
-      "type": "image/png"
+      "type": "image/jpg"
     },
     {
-      "src": "./img/icon_192.png",
+      "src": "./img/logox192.jpg",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/jpg"
     },
     {
-      "src": "./img/icon_128.png",
+      "src": "./img/logox128.jpg",
       "sizes": "128x128",
-      "type": "image/png"
+      "type": "image/jpg"
     },
     {
-      "src": "./img/icon_96.png",
+      "src": "./img/logox96.jpg",
       "sizes": "96x96",
-      "type": "image/png"
+      "type": "image/jpg"
     },
     {
-      "src": "./img/icon_64.png",
+      "src": "./img/logox64.jpg",
       "sizes": "64x64",
-      "type": "image/png"
+      "type": "image/jpg"
     },
     {
-      "src": "./img/icon_32.png",
+      "src": "./img/logox32.jpg",
       "sizes": "32x32",
-      "type": "image/png"
+      "type": "image/jpg"
     },
     {
-      "src": "./img/favicon.png",
+      "src": "./img/logo1.jpg",
       "sizes": "16x16",
-      "type": "image/png"
+      "type": "image/jpg"
     }
   ]
 }
